Fix margin mobile and alignments

--- a/src/components/SavedCardsPicker/SavedCardsPickerHeader.module.css
+++ b/src/components/SavedCardsPicker/SavedCardsPickerHeader.module.css
@@ -1,5 +1,8 @@
 @import '../../style/variable.global.css';
 
+.radioButton {
+  width: var(--marginLarge);
+}
 .header {
   align-items: flex-start;
   box-sizing: border-box;
